add dockerfile  and docker compose

--- a/web/index.html
+++ b/web/index.html
@@ -179,6 +179,7 @@
 {% endif %}
   <button id="log_out" class="btn btn-danger">Выйти из сессии</button>
   </div> 
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.6.8/dist/axios.min.js"></script> 
   <script src="/static/index.js"></script>
 </body>
 
