add usertelegram to env

--- a/web/login.html
+++ b/web/login.html
@@ -15,7 +15,7 @@
 
       <div class="telegram-widget-wrapper">
         <script async src="https://telegram.org/js/telegram-widget.js?22" 
-                data-telegram-login="loggign_bot" 
+                data-telegram-login={{TELEGRAM_USERNAME}} 
                 data-size="large" 
                 data-auth-url="/auth/telegram-widget" 
                 data-request-access="write">
