--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <title>Telegram Messenger</title>
     <style>
       :root {
-        --tg-color: #0088cc; /* Основной цвет Telegram */
+        --tg-color: #0088cc; 
         --success-color: #4CAF50;
         --error-color: #f44336;
         --text-color: #333;
